# src/main/java/ru/vsu/csf/asashina/cinemaback/models/request/CardNumberRequest.java
@@ -1,0 +1,18 @@
+package ru.vsu.csf.asashina.cinemaback.models.request;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import javax.validation.constraints.Size;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+public class CardNumberRequest {
+
+    @Size(min = 16, max = 16)
+    private String cardNumber;
+}
